installdir = $(pkglibdir)/python/Plugins/Extensions/MyTube

SUBDIRS = meta po

install_PYTHON = \
				__init__.py \
				MyTubeSearch.py \
				MyTubeService.py \
				plugin.py \
				ThreadQueue.py

install_DATA = \
				LICENSE \
				list_bg.png \
				list_sel.png \
				maintainer.info \
				mytubemain_bg.png \
				plugin.png \
				starsbar_empty.png \
				starsbar_filled.png \
				suggestions_bg.png
