installdir = $(pkglibdir)/python/Plugins/Extensions/MyTube/po

install_DATA = \
				ar.po \
				ca.po \
				cs.po \
				da.po \
				de.po \
				el.po \
				en.po \
				es.po \
				fi.po \
				fr.po \
				fy.po \
				hr.po \
				hu.po \
				is.po \
				it.po \
				lt.po \
				MyTube.pot \
				nl.po \
				no.po \
				pl.po \
				pt.po \
				ru.po \
				sr.po \
				sv.po \
				tr.po
